--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wessamlasheen.github.io/React Health Care/",
+  "homepage": "https://wessamlasheen.github.io/React-Health-Care-/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
